--- a/functions/package.json
+++ b/functions/package.json
@@ -17,8 +17,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0"
+    "firebase-admin": "^8.5.0",
+    "firebase-functions": "^3.2.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
