--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.6",
-    "@angular/cdk": "7.3.7",
+    "@angular/cdk": "^8.2.0",
     "@angular/common": "8.2.6",
     "@angular/compiler": "8.2.6",
     "@angular/core": "8.2.6",
-    "@angular/flex-layout": "7.0.0-beta.24",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "8.2.6",
     "@angular/material": "7.3.7",
     "@angular/platform-browser": "8.2.6",
