Updated to Angular8, updated packages, fixed rxjs, fixed api cors

--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,22 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "/api/**",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ],
     "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "main"
+      },
       {
         "source": "**",
         "destination": "/index.html"
