--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "mythall": {
-      "root": "",
+      "root": "src",
       "sourceRoot": "src",
       "projectType": "application",
       "architect": {
