--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@angular/common": "8.2.6",
     "@angular/compiler": "8.2.6",
     "@angular/core": "8.2.6",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "8.2.6",
-    "@angular/material": "7.3.7",
+    "@angular/material": "8.2.0",
     "@angular/platform-browser": "8.2.6",
     "@angular/platform-browser-dynamic": "8.2.6",
     "@angular/router": "8.2.6",
-    "angularfire2": "5.1.3",
     "bootstrap": "4.3.1",
     "core-js": "^3.2.1",
-    "firebase": "6.0.2",
+    "firebase": "^6.0.2",
     "firebase-functions": "2.3.1",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.3",
