--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.6",
+    "@angular/animations": "9.0.5",
     "@angular/cdk": "^8.2.0",
-    "@angular/common": "8.2.6",
-    "@angular/compiler": "8.2.6",
-    "@angular/core": "8.2.6",
+    "@angular/common": "9.0.5",
+    "@angular/compiler": "9.0.5",
+    "@angular/core": "9.0.5",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "8.2.6",
+    "@angular/forms": "9.0.5",
     "@angular/material": "8.2.0",
-    "@angular/platform-browser": "8.2.6",
-    "@angular/platform-browser-dynamic": "8.2.6",
-    "@angular/router": "8.2.6",
+    "@angular/platform-browser": "9.0.5",
+    "@angular/platform-browser-dynamic": "9.0.5",
+    "@angular/router": "9.0.5",
     "bootstrap": "4.3.1",
     "core-js": "^3.2.1",
     "firebase": "^6.0.2",
     "firebase-functions": "2.3.1",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.3",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.5",
-    "@angular/cli": "^8.3.4",
-    "@angular/compiler-cli": "^8.2.6",
-    "@angular/language-service": "^8.2.6",
-    "codelyzer": "^5.0.1",
-    "typescript": "^3.5.3"
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular/cli": "^9.0.5",
+    "@angular/compiler-cli": "^9.0.5",
+    "@angular/language-service": "^9.0.5",
+    "codelyzer": "^5.1.2",
+    "typescript": "^3.7.5"
   }
 }
