--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/compiler": "9.0.5",
     "@angular/core": "9.0.5",
     "@angular/fire": "^5.4.2",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "9.0.5",
     "@angular/material": "9.1.1",
     "@angular/platform-browser": "9.0.5",
@@ -38,6 +38,6 @@
     "@angular/compiler-cli": "^9.0.5",
     "@angular/language-service": "^9.0.5",
     "codelyzer": "^5.1.2",
-    "typescript": "^3.8.3"
+    "typescript": "3.7.5"
   }
 }
